--- a/wjdc/answer.html
+++ b/wjdc/answer.html
@@ -32,13 +32,13 @@
 </section>
 <section class="m_content" id="j-content">
     <div class="m_subject">
-        <dl data-id="1">
+        <dl data-id="1" data-type="2">
             <dt>
                 1、以下哪个选项是漫画/动画片的入口？ <br>
                 （多选）
             </dt>
             <dd>
-                <i><b class="active"></b></i>a、广场-娱乐频道
+                <i><b></b></i>a、广场-娱乐频道
             </dd>
             <dd>
                 <i><b></b></i>b、广场-活动
@@ -50,7 +50,7 @@
                 <i><b></b></i>d、首页-资讯
             </dd>
         </dl>
-        <dl class="fill" data-id="2">
+        <dl class="fill" data-id="2" data-type="3">
             <dt>
                 2、新增的漫画和动画片，是否有你感兴趣的内容呢？如果有请举例说明，喜欢哪些？如果没有请告知原因， 我们会补充更多内容~
             </dt>
@@ -60,8 +60,8 @@
             </div>
         </dl>
 
-        <p>投票（多选，最多可选3项）</p>
-        <dl data-id="3">
+        <p> <span>投票</span>（多选，最多可选3项）</p>
+        <dl data-id="3" data-type="2">
             <dt>【1】你最希望在游戏盒上动漫频道看到更多的哪一分类动画片呢？</dt>
             <dd><i><b></b></i>热血战斗</dd>
             <dd><i><b></b></i>校园生活</dd>
@@ -74,12 +74,12 @@
             <dd><i><b></b></i>动画电影</dd>
             <dd class="other">其他分类:<input class="j-inp" type="text"></dd>
         </dl>
-        <dl data-id="4">
+        <dl data-id="4" data-type="2">
             <dt>【2】你最希望在游戏盒上漫画频道看到更多的哪一分类漫画呢？</dt>
             <dd><i><b></b></i> 热血战斗</dd>
             <dd><i><b></b></i>青春恋爱</dd>
             <dd><i><b></b></i>四格漫画</dd>
-            <dd><i><b></b></i>校园生活=</dd>
+            <dd><i><b></b></i>校园生活</dd>
             <dd><i><b></b></i>搞笑逗比</dd>
             <dd><i><b></b></i>耽美百合</dd>
             <dd><i><b></b></i>体育竞技</dd>
@@ -88,7 +88,7 @@
             <dd><i><b></b></i>历史人文</dd>
             <dd class="other">其他分类:<input class="j-inp" type="text"></dd>
         </dl>
-        <dl data-id="5">
+        <dl data-id="5" data-type="2">
             <dt>【3】以下哪一部是你最喜欢的动画片？</dt>
             <dd><i><b></b></i>猪猪侠</dd>
             <dd><i><b></b></i>赛尔号</dd>
@@ -102,7 +102,7 @@
             <dd><i><b></b></i>神奇宝贝</dd>
             <dd class="other">以上没有我喜欢的，我最喜欢的动画片是： <input class="j-inp" type="text"></dd>
         </dl>
-        <dl>
+        <dl data-id="6" data-type="2">
             <dt>【4】以下哪一部是你最喜欢的漫画？</dt>
             <dd><i><b></b></i> 妞妞淘</dd>
             <dd><i><b></b></i>基因猎人</dd>
@@ -117,8 +117,8 @@
             <dd class="other">以上没有我喜欢的，我最喜欢的漫画是：<input class="j-inp" type="text"></dd>
         </dl>
     </div>
-    <div class="m_submit">
-        <a href=""></a>
+    <div class="m_submit j-submit">
+        <a></a>
     </div>
 </section>
 <footer>
@@ -127,6 +127,17 @@
         ©2004-2016四三九九网络股份有限公司
     </p>
 </footer>
+<section class="m_popup j-popup">
+    <div class="m_box z_success j-success">
+        <i class="j-close"></i>
+        <a href="" class="dt"></a>
+        <a href="" class="jz"></a>
+        <a href="" class="sx"></a>
+    </div>
+    <div class="m_box z_fail j-fail">
+        <i class="j-close"></i>
+    </div>
+</section>
 </body>
 </html>
 <script src="http://srs.sowdf.com/js/zepto.min.js"></script>
@@ -136,26 +147,52 @@
             this.result = {
 
             };
+            this.elem();
             this.bindClick();
             this.bindInput();
+            this.submit();
+            this.inputDefult();
         },
         elem : function(){ /* 获取元素 */
             this.$dd = $('dd');
+            this.$close = $('.j-close');
+            this.$pop = $('.j-popup');
+            this.$success = $('.j-success');
+            this.$fail = $('.j-fail');
+            this.$textArea = $('textarea');
+            this.$submit = $('.j-submit');
         },
         bindClick : function(){
             var This = this;
+
             $('#j-content').delegate('dd','tap',function(){
+                var maxSelect = 0;
+                This.$type = $(this).closest('dl').data('type');
+
+                switch (This.$type) {  /* 多少个选择 */
+                    case 1:
+                        maxSelect = 1 /* 最多选择1个 */
+                        break;
+                    case 2:
+                        maxSelect = 3 /* 最多选择三个 */
+                        break;
+                    case 4:
+                        maxSelect = 1 /* 最多选择三个 */
+                        break;
+                    case 5:
+                        maxSelect = 3 /* 最多选择三个 */
+                        break;
+                }
+
                 $(this).find('b').toggleClass('active'); /* 有就选中 */
                 This.selElems = $(this).parent().find('.active'); /* 获得b元素的集合  */
 
                 /* 做多选多少个 */
-                if(This.selElems.length > 3 ){
+                if(This.selElems.length > maxSelect ){
                     $(this).find('b').toggleClass('active'); /* 有就选中 */
-                    alert('最多只能选三个哦！');
+                    This.showTips('最多只能选'+maxSelect+'个哦！');
                     return ;
                 }
-
-
 
                 This.$id = $(this).parent().data('id');
                 This.getSelect();
@@ -165,30 +202,108 @@
             var This = this;
 
             $('#j-content').delegate('.j-inp','blur',function(){
+                This.$type = $(this).closest('dl').data('type');
                 This.$id = $(this).closest('dl').data('id');
                 This.$input = $(this).val();
                 This.getInput();
             });
         },
         getSelect : function(){
+            var length = 0;
             var This = this;
             this.arr = [];
 
             this.selElems.each(function(i,elem){ /* 遍历集合 赋值元素 */
+                length++;
                 This.arr.push($(elem).closest('dd').index());
             });
 
             if(!this.result[this.$id]){
                 this.result[this.$id] = {};
             }
-            this.result[this.$id].select = this.arr; /* 储存选择结果 */
+
+            if(length == 0){ /* 如果长度为零 就标示一下 */
+                this.result[this.$id].select = 0 ; /* 0 表示没有数据 */
+            }else{
+                this.result[this.$id].select = this.arr; /* 储存选择结果 */
+
+            }
+
             this.arr = null;
+            console.log(this.result);
         },
         getInput : function(){
             if(!this.result[this.$id]){
                 this.result[this.$id] = {};
             }
-            this.result[this.$id].input = this.$input; /* 储存选择结果 */
+            if(this.$input == '' && this.$type == 3){ /* 如果内容为空 就标示一下 */
+                delete this.result[this.$id].input; /* 删除这个字段  */
+            }else {
+                this.result[this.$id].input = this.$input; /* 储存选择结果 */
+            }
+            console.log(this.result);
+        },
+        submit : function(){ /* 提交数据结果 */
+            var This = this;
+
+            this.$submit.on('click',function(){
+                var length = 0;
+
+                for(var json in This.result){/* 获取JSON长度 */
+                    if(!(This.result[json].select == 0  || (!This.result[json].select && !This.result[json].input))){ /* 判断选项是否存在 不存在说明是自填提 存在说明是已选择的 */
+                        length++;
+
+                    }
+                }
+
+                if(length != 6){
+                    This.popFali();
+                }else{
+                    This.popSuccess();
+                }
+
+            });
+        },
+        showTips : function(text){ /* 普通提示 */
+            if($tips){
+                $('.j-showTips').remove();
+            }
+
+            var $tips = $('<div class="g_showTips j-showTips"><p>'+text+'</p></div>');
+
+            $(document.body).append($tips);
+
+            var $obj = $('.j-showTips p');
+            var $top = ($(window).height() - $obj.height()) / 2;
+
+            $obj.css('top',$top);
+
+            setTimeout(function(){
+                $('.j-showTips').remove();
+            },2500)
+        },
+        popSuccess : function(){ /* 弹出成功提示 */
+            this.$pop.show();
+            this.$success.show();
+            this.$fail.hide();
+            this.popClose();
+        },
+        popFali : function(){ /* 弹出错误提示 */
+            this.$pop.show();
+            this.$success.hide();
+            this.$fail.show();
+            this.popClose();
+        },
+        popClose : function(){
+            var This = this;
+            this.$close.on('click', function(){
+                This.$pop.hide();
+            });
+        },
+        inputDefult : function(){
+            this.$textArea.focus(function(){$(this).val('')}).blur(function(){
+                ($(this).val() === '')? $(this).val('快快说出你想法吧~') : null;                 /* 设置未输入的值 */
+            });
         }
     }
     answer.init();
