--- a/wjdc/index.html
+++ b/wjdc/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="dev/css/style.css">
+	<meta name="description" content="">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <!--ios-->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-touch-fullscreen" content="yes"/>
+    <!--qq-->
+
+    <meta name="x5-fullscreen" content="true">
+    <meta name="x5-page-mode" content="app">
     <script>
+        alert(1);
         ! function(a) {
             function b() {
-                a.rem = f.getBoundingClientRect().width / 16, f.style.fontSize = a.rem + "px"
+                a.rem = f.getBoundingClientRect().width / 16, f.style.fontSize = a.rem + "px";
             }
             var c, d = a.navigator.appVersion.match(/iphone/gi) ? a.devicePixelRatio : 1,
                     e = 1 / d,
